oops minor fix to image on mobile

--- a/index.css
+++ b/index.css
@@ -585,6 +585,7 @@ font-optical-sizing: auto;
     height: 50vw;
     margin-bottom: 5vw;
     margin-right: 0;
+    margin-top: 0;
   }
 
   .main h1 {
